--- a/anoise/anoise.ui
+++ b/anoise/anoise.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
-<interface>
+<!-- Generated with glade 3.16.1 -->
+<interface domain="anoise">
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkWindow" id="main_win">
     <property name="can_focus">False</property>
