--- a/anoise/anoise.ui
+++ b/anoise/anoise.ui
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkWindow" id="main_win">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">ANoise</property>
+    <property name="title" translatable="no">ANoise</property>
     <property name="resizable">False</property>
     <property name="icon_name">anoise</property>
     <signal name="delete-event" handler="on_main_win_delete_event" swapped="no"/>
